--- a/polls_project/streamthemen/templates/topics_uncompleted_authenticated.html
+++ b/polls_project/streamthemen/templates/topics_uncompleted_authenticated.html
@@ -51,8 +51,8 @@
                 {% endif %}
             </div>
             <div class="is-1 is-clipped">
-                <p class="topic-text" id="text-{{ topic.id }}">
-                    {{ topic.title }}
+                <p class="topic-text is-flex" id="text-{{ topic.id }}">
+                    {% include "emote-message.html" %}
                 </p>
                 <p>
                     <i>{{ topic.created_at }}</i>
