--- a/polls_project/streamthemen/templates/topics_completed.html
+++ b/polls_project/streamthemen/templates/topics_completed.html
@@ -24,7 +24,7 @@
                 </button>
             </div>
             <div class="is-1 is-clipped">
-                <p class="topic-text" id="text-{{ topic.id }}">
+                <p class="topic-text is-flex" id="text-{{ topic.id }}">
                     {% include "emote-message.html" %}
                 </p>
                 <p>
