--- a/polls_project/streamthemen/templates/topics_uncompleted.html
+++ b/polls_project/streamthemen/templates/topics_uncompleted.html
@@ -23,7 +23,7 @@
                 </button>
             </div>
             <div class="is-1 is-clipped">
-                <p class="topic-text is-flex" id="text-{{ topic.id }}">
+                <p class="topic-text is-flex is-flex-wrap-wrap" id="text-{{ topic.id }}">
                     {{ topic.title|match_emote|safe }}
                 </p>
                 <p>
