--- a/polls_project/streamthemen/templates/topics_uncompleted_authenticated.html
+++ b/polls_project/streamthemen/templates/topics_uncompleted_authenticated.html
@@ -53,7 +53,7 @@
                 {% endif %}
             </div>
             <div class="is-1 is-clipped">
-                <p class="topic-text is-flex" id="text-{{ topic.id }}">
+                <p class="topic-text is-flex is-flex-wrap-wrap" id="text-{{ topic.id }}">
                     {{ topic.title|match_emote|safe }}
                 </p>
                 <p>
